--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,314 +1,236 @@
-
 /* SITE STYLE PALETTE */
 :root {
-    --dark: #171219;
-    --blue: #225560;
-    --yellow: #EDF060;
-    --orange: #F0803C;
-    --maroon: #310D20;
-    --border-radius: .3rem;
+  --dark: #171219;
+  --orange: #ff6624;
+  --light-orange: #ffaa04;
+  --beige: #fff8e9;
+  --gray: #e2dbcd;
+  --border-radius: 0.3rem;
+  --main-text: "Open Sans", sans-serif;
+  --header-text: "Shrikhand", cursive;
 }
 
-/* ELEMENT STYLES */
- .row {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    width: fit-content;
-  }
-  
-  .column {
-    display: flex;
-    flex-direction: column;
-    flex-basis: 100%;
-    flex: 1;
-  }
-
-  i {
-    color: var(--orange);
-    text-shadow: 2px 2px 3px var(--maroon);
-  }
-
-  /* HEADER STYLES */
-  .header-title {
-      color: var(--blue);
-      text-shadow: 2px 2px 3px var(--orange);
-      font-family: Anton;
-  }
-
-  .header-p {
-    color: var(--maroon);
-    text-shadow: 1px 1px 1px var(--orange);
-    font-weight: bolder;
-    outline: 1px var(--maroon);
-  }
-
-  .store-icon {
-    color: var(--blue);
-    text-shadow: 1px 1px 1px var(--orange);
-  }
-
-  .video-icon {
-    color: var(--orange);
-    text-shadow: 1px 1px 1px var(--blue);
-  }
-
-  /* SECTION TITLE STYLES */
-  .section-header {
-    color:var(--blue);
-    font-family: Anton;
-    font-size: 20px;
-  }
-
-  /* SEARCH PLACEHOLDER TEXT STYLES */
-  ::placeholder {
-    color: var(--dark);
-    /* font-family: Anton; */
-    font-weight: light;
-    opacity: 0.5;
-    text-shadow: 1px 1px 1px var(--orange);
-  }
-
- /* RESTAURANT RESULTS CONTAINER STYLES */
- .food-select {
-    width: max-content !important;
-    height:auto;
-    padding-top: 7px;
- }
-
- .btn {
-    margin: 5px;
-    font-weight: bolder;
- }
-
- /* 'SEARCH RESTAURANTS' BUTTON STYLES */
- .search-btn, .btn:focus {
-     background-color: var(--orange);
-     border-radius: var(--border-radius);
-     color: var(--maroon);
-     text-shadow: 1px 1px 1px var(--yellow);
- }
-
- .search-btn:hover{
-    background-color: var(--maroon);
-    border-radius: var(--border-radius);
-    color: var(--orange);
-    text-shadow: 1px 1px 1px var(--blue);
- }
-
- /* 'CLEAR SEARCH HISTORY' BUTTON STYLES */
- .clear-btn, .clear-btn:focus {
-    background-color: var(--blue);
-    border-radius: var(--border-radius);
-    color: var(--yellow);
-    text-shadow: 1px 1px 1px var(--orange);
+body {
+  background: var(--orange);
+  height: 100vh;
+  transition: ease;
 }
 
-.clear-btn:hover{
-    background-color: var(--yellow);
-    border-radius: var(--border-radius);
-    color: var(--blue);
-    text-shadow: 1px 1px 1px var(--orange);
+/* GRID */
+.row {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: fit-content;
 }
 
-/* 'SEARCH MOVIES' BUTTON STYLES */
-.movie-btn, .movie-btn:focus {
-    background-color: var(--maroon);
-    border-radius: var(--border-radius);
-    color: var(--orange);
-    text-shadow: 1px 1px 1px var(--blue);
+.column {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 100%;
+  flex: 1;
 }
 
-.movie-btn:hover{
-   background-color: var(--orange);
-   border-radius: var(--border-radius);
-   color: var(--maroon);
-   text-shadow: 1px 1px 1px var(--yellow);
+/* HEADER STYLES */
+#header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
 
-/* 'ZIP CODE' BUTTON STYLES */
-.zip-btn, .zip-btn:focus {
-    background-color: var(--dark);
-    border-radius: var(--border-radius);
-    color: var(--yellow);
-    text-shadow: 1px 1px 1px var(--blue);
+#header h1 {
+  color: var(--beige);
+  text-shadow: 2px 2px 3px var(--light-orange);
+  font-family: var(--header-text);
+  line-height: 0.8;
+  text-transform: uppercase;
 }
 
-.zip-btn:hover {
-    background-color: var(--yellow);
-    border-radius: var(--border-radius);
-    color: var(--dark);
-    text-shadow: 1px 1px 1px var(--blue);
+#header p {
+  color: var(--beige);
+  line-height: 0.5;
+  font-family: var(--main-text);
+  font-style: italic;
 }
 
- .dropdown-content li>a {
-     color: black;
-     align-items: center;
- }
-
- /* RESTAURANT CHOICE BUTTON STYLES */
- .restaurant-btn, .restaurant-btn:focus {
-    background-color: var(--yellow);
-    border-radius: var(--border-radius);
-    color: var(--maroon);
-    font-weight: bolder;
+/* ZIPCODE */
+#zipcode-ask {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  justify-content: center;
+  padding-top: 50px;
 }
 
-.restaurant-btn:hover {
-    background-color: var(--maroon);
-    border-radius: var(--border-radius);
-    color: var(--yellow);
-    font-weight: bolder;
+#search-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 20%;
+  align-items: center;
+  justify-content: center;
 }
 
-/* MODAL STYLES */
+/* SECTION TITLE STYLES */
+.section-header {
+  color: var(--beige);
+  font-size: 20px;
+  text-align: center;
+}
+
+/* SEARCH PLACEHOLDER TEXT STYLES */
+/* ::placeholder {
+  color: var(--dark);
+  font-weight: light;
+  opacity: 0.5;
+  text-shadow: 1px 1px 1px var(--orange);
+} */
+
+/* RESTAURANT RESULTS CONTAINER STYLES */
+.food-select {
+  width: max-content !important;
+  height: auto;
+  padding-top: 7px;
+}
+
+/* BUTTONS */
+.btn {
+  background-color: transparent;
+  border-radius: var(--border-radius);
+  margin: 5px;
+}
+
+.dropdown-content li > a {
+  color: black;
+  align-items: center;
+}
+
+/* MODALS */
 .modal {
-    border-radius: var(--border-radius);
-    max-height: fit-content;
+  border-radius: var(--border-radius);
+  max-height: fit-content;
 }
 
 .modal-content {
-    background-color: var(--yellow);
-    color: var(--blue);
-    font-weight: light;
+  background-color: var(--gray);
+  font-weight: light;
 }
 
-.modal-content h4 {
-    color: var(--maroon);
-}
-
-.modal-content p {
-    color: var(--blue);
-    }
-
-/* RESTAURANT MODAL IMAGE STYLES */    
 .restaurant-img {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-};
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.dropdown-trigger,
+.food-select {
+  width: 100%;
+  display: flex;
+}
 
 /* TEXT STYLES */
 a {
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
-h3 {
-    color: var(--maroon);
-    font-family: Anton;
+/* BROWSER-BASED STYLES */
+::-webkit-input-placeholder:hover {
+  background-color: transparent;
+  color: transparent;
+  display: none;
+  opacity: 0;
 }
 
-h4 {
-    color: var(--orange);
-    font-family: Anton; 
+input:focus::-webkit-input-placeholder {
+  background-color: transparent;
+  color: transparent;
+  opacity: 0;
 }
 
-p {
-    color: var(--maroon);
-    font-weight: bold;
+input:focus:-moz-placeholder {
+  background-color: transparent;
+  color: transparent;
+  opacity: 0;
+} /* FF 4-18 */
+
+input:focus::-moz-placeholder {
+  background-color: transparent;
+  color: transparent;
+  opacity: 0;
+} /* FF 19+ */
+
+input:focus:-ms-input-placeholder {
+  background-color: transparent;
+  color: transparent;
+  opacity: 0;
+} /* IE 10+ */
+
+/* MOVIE CARD STYLES */
+#movie-card-con {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 auto;
+  justify-content: space-between;
+  align-items: space-around;
 }
 
-.dropdown-trigger, .food-select{
-     width: 100%;
-     display: flex;
+.movie-cardy {
+  width: 40%;
+  padding: 0, 10px;
 }
- 
-  /* BROWSER-BASED STYLES */
- ::-webkit-input-placeholder:hover {
-    background-color: transparent;
-    color: transparent;
-    display: none;
-    opacity: 0;
-  };
 
- input:focus::-webkit-input-placeholder { 
-    background-color: transparent;
-    color:transparent;
-    opacity: 0;
-  };
+.movie-cardy h3 {
+  font-size: 1.5vw;
+  margin: 0 10px;
+}
 
- input:focus:-moz-placeholder { 
-    background-color: transparent;
-    color:transparent;
-    opacity: 0;
-  }; /* FF 4-18 */
+.clear-btn {
+  overflow: hidden;
+}
 
- input:focus::-moz-placeholder { 
-    background-color: transparent;
-    color:transparent;
-    opacity: 0;
-  }; /* FF 19+ */
+.movie-poster-img {
+  width: 100%;
+  height: auto;
+}
 
- input:focus:-ms-input-placeholder {
-    background-color: transparent;
-    color:transparent;
-    opacity: 0;
-  }; /* IE 10+ */
-  
-  /* MOVIE CARD STYLES */
-  #movie-card-con {
-      display: flex;
-      flex-wrap: wrap;
-      margin: 0 auto;
-      justify-content: space-between;
-      align-items: space-around;
-  }
- 
-  .movie-cardy {
-      width: 40%;
-      padding: 0, 10px;
+/* FOOTER STYLES */
+.page-footer {
+  font-family: var(--main-text);
+  border: none;
+  background: transparent;
+}
+
+.restaurant-result {
+  margin: 5px;
+  border: 1px solid;
+}
+
+/* HIDE FUNCTION */
+.hide {
+  display: none;
+}
+
+/* MEDIA QUERIES */
+@media screen and (max-width: 575px) {
+  .movie-select {
+    justify-content: center;
   }
 
-  .movie-cardy h3 {
-      font-size: 1.5vw;
-      margin: 0 10px;
+  .header-title {
+    font-size: 50px;
   }
 
-  .clear-btn {
-      overflow: hidden;
+  span {
+    width: 100%;
+    display: inline-block;
   }
+}
 
-  .movie-poster-img {
-      width: 100%;
-      height: auto;
+@media screen and (max-width: 360px) {
+  .header-title {
+    font-size: 45px;
   }
-
-  /* FOOTER STYLES */
- .page-footer {
-     background-color: var(--blue);
- }
-
- .restaurant-result {
-     margin: 5px;
-     border: 1px solid;
- }
-
- /* HIDE FUNCTION */
- .hide {
-     display: none;
- }
-
- /* MEDIA QUERIES */
- @media screen and (max-width: 575px) {
-    .movie-select {
-      justify-content: center;
-    }
-
-    .header-title {
-      font-size: 50px;
-    }
-
-    span {
-        width: 100%;
-        display: inline-block;
-    }
-  }
-
-  @media screen and (max-width: 360px) {
-    .header-title {
-      font-size: 45px;
-    }
-  }
-  
+}
