--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,13 @@
 /* SITE STYLE PALETTE */
 :root {
-  --background: #FFF8EA;
-  --accent: #D5F1E5;
-  --button: #E2DBCD;
+  --background: #fff8ea;
+  --accent: #d5f1e5;
+  --button: #e2dbcd;
   --subtle-text: #868581;
+  --hover: #FE5678;
   --border-radius: 0.3rem;
-  --main-text: "Open Sans", sans-serif;
   --header-text: "Quicksand", sans-serif;
+  --main-text: "Open Sans", sans-serif;
 }
 
 html {
@@ -15,40 +16,46 @@ html {
 
 body {
   background: var(--background);
-  height: 100vh;
   transition: ease;
 }
 
-/* GRID */
-.row {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  width: fit-content;
-}
-
-.column {
-  display: flex;
-  flex-direction: column;
-  flex-basis: 100%;
-  flex: 1;
+a:hover {
+  color: var(--hover);
 }
 
 /* HEADER STYLES */
-.landing-page {
-  display: flex;
+.logo {
+  height: 20px;
+  width: 150px;
+  overflow: hidden;
+  object-fit: cover;
 }
+/* blob */
+#blob {
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 23vw;
+  height: 90vh;
+}
+/* icecream image */
 .hero {
-  height: 550px;
+  width: 50vw;
+  transform: rotate(30deg);
+  position: absolute;
 }
 
-#header h1 {
+.title {
+  position: relative;
+}
+
+.title h1 {
   color: black;
   font-family: var(--header-text);
   font-size: 45px;
 }
 
-#header p {
+.title p {
   color: black;
   font-family: var(--main-text);
 }
@@ -58,15 +65,11 @@ body {
   display: flex;
   flex-flow: column;
   align-items: center;
-  justify-content: center;
   padding-top: 20px;
 }
 
 #zipcode-ask .search-container {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  width: 20%;
+  width: 40%;
   align-items: center;
   justify-content: center;
 }
@@ -82,6 +85,8 @@ body {
   text-align: center;
   background: var(--accent);
   border-radius: var(--border-radius);
+  border: none;
+  height: 50px;
 }
 
 #zip-list {
@@ -149,6 +154,7 @@ body {
 .btn {
   background-color: transparent;
   border-radius: var(--border-radius);
+  border: 1px dashed black;
   margin: 5px;
 }
 
@@ -277,41 +283,18 @@ input:focus:-ms-input-placeholder {
 
 /* FOOTER STYLES */
 footer {
-  position: sticky;
+  position: absolute;
   bottom: 0;
-  background-color: transparent;
-  border: none;
+  padding-left: 20px;
 }
-
 footer a {
   color: var(--subtle-text);
   font-family: var(--main-text);
   font-size: 11px;
+  text-decoration: none;
 }
 
 /* HIDE FUNCTION */
 .hide {
   display: none;
-}
-
-/* MEDIA QUERIES */
-@media screen and (max-width: 575px) {
-  .movie-select {
-    justify-content: center;
-  }
-
-  .header-title {
-    font-size: 50px;
-  }
-
-  span {
-    width: 100%;
-    display: inline-block;
-  }
-}
-
-@media screen and (max-width: 360px) {
-  .header-title {
-    font-size: 45px;
-  }
 }
