--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,8 +38,13 @@ a:hover {
   left: 23vw;
   height: 90vh;
 }
+
 /* icecream image */
-.hero {
+/* .hero {
+  transition: visibility 0s, opacity 0.5s linear;
+} */
+
+.hero img {
   width: 50vw;
   transform: rotate(30deg);
   position: absolute;
@@ -47,6 +52,7 @@ a:hover {
 
 .title {
   position: relative;
+  /* transition: visibility 0s, opacity 0.5s linear; */
 }
 
 .title h1 {
@@ -66,14 +72,6 @@ a:hover {
   flex-flow: column;
   align-items: center;
   padding-top: 20px;
-}
-
-/* history container */
-#zip-search-container {
-  display: flex;
-  align-items: center;
-  flex-flow: column;
-  padding-top: 10px;
 }
 
 /* zip input */
