--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,7 @@ a {
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  text-decoration: none;
 }
 
 a:hover {
@@ -31,6 +32,15 @@ a:hover {
 }
 
 /* HEADER STYLES */
+header {
+  display: inline-flex;
+  align-items: center;
+}
+
+header a {
+  color: var(--subtle-text);
+}
+
 .logo {
   height: 40px;
   width: 200px;
@@ -258,21 +268,9 @@ input:focus:-ms-input-placeholder {
 #movie-search-input {
   width: fit-content;
   text-align: center;
-  background: var(--button);
+  background: var(--accent);
   border-radius: var(--border-radius);
-}
-
-/* FOOTER */
-footer {
-  position: absolute;
-  bottom: 0;
-  padding-left: 20px;
-}
-footer a {
-  color: var(--subtle-text);
-  font-family: var(--main-text);
-  font-size: 11px;
-  text-decoration: none;
+  border: none;
 }
 
 /* HIDE FUNCTION */
