--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,126 @@
-.App {
+/* SITE STYLE PALETTE */
+:root {
+  --background: #fff8ea;
+  --accent: #d5f1e5;
+  --button: #e2dbcd;
+  --subtle-text: #868581;
+  --hover: #FE5678;
+  --border-radius: 0.3rem;
+  --header-text: "Quicksand", sans-serif;
+  --main-text: "Open Sans", sans-serif;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  background: var(--background);
+  transition: ease;
+}
+
+/* TEXT */
+#error {
+  color: red;
+  font-style: italic;
+}
+
+li {
+  list-style-type: none;
+}
+
+a {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  text-decoration: none;
+}
+
+a:hover {
+  color: var(--hover);
+}
+
+/* HEADER STYLES */
+header {
+  display: inline-flex;
+  align-items: center;
+}
+
+header a {
+  color: var(--subtle-text);
+}
+
+.logo {
+  height: 40px;
+  width: 200px;
+  overflow: hidden;
+  object-fit: cover;
+}
+/* blob */
+#blob {
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 20vw;
+  height: 100%;
+}
+
+.hero {
+  width: 50vw;
+  transform: rotate(30deg);
+}
+
+.title {
+  position: relative;
+}
+
+.title h1 {
+  color: black;
+  font-family: var(--header-text);
+  font-size: 45px;
+}
+
+.title p {
+  color: black;
+  font-family: var(--main-text);
+}
+
+/* ZIPCODE */
+#zipcode-ask {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  padding-top: 20px;
+}
+
+/* zip input */
+#zip, .zip-history{
+  text-align: center;
+  background: var(--accent);
+  border-radius: var(--border-radius);
+  border: none;
+}
+
+#zip {
+  height: 50px;
+}
+
+/* SECTION TITLE STYLES */
+.section-header {
+  color: black;
+  font-family: var(--main-text);
+  font-size: 20px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* CROP IMAGES */
+.crop {
+  height: 160px;
+  object-fit: cover;
+  overflow: hidden;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* UTILITIES */
+.hide {
+  display: none;
 }
